# DynamicFunctioneer

./: .pre-commit-README.md  .pre-commit-config.yaml  CI_FIXES.md  MIGRATION_GUIDE.md  PROJECT_STRUCTURE.md  README.md  REFACTORING_SUMMARY.md  RESTRUCTURING_CHANGELOG.md  TESTING.md  TESTING_IMPROVEMENTS_SUMMARY.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: coverage.yml  tests.yml
dynamic_functioneer/: __init__.py  anthropic_model_api.py  boilerplate_manager.py  code_analyzer.py  config.py  crewai_model_api.py  crewai_sequential2_model.py  d_calculate_average.py  dynamic_code_manager.py  dynamic_decorator.py  dynamic_execution_handler.py  gemini_model_api.py  hot_swap_executor.py  langgraph_model_api.py  llama_model_api.py  llm_code_generator.py  llm_response_cleaner.py  model_api_factory.py  openai_model_api.py  prompt_manager.py  protocols.py  test_code_extractor.py  test_code_selector.py  test_runner.py
dynamic_functioneer/code_generation/: __init__.py  llm_code_generator.py
dynamic_functioneer/code_management/: __init__.py  code_loader.py  code_storage.py  dynamic_code_manager.py  hot_swap_executor.py  test_import_injector.py
dynamic_functioneer/code_processing/: __init__.py
dynamic_functioneer/models/: __init__.py  anthropic_model_api.py  base_model_api.py  gemini_model_api.py  langgraph_model_api.py  llama_model_api.py  model_api_factory.py  openai_model_api.py
dynamic_functioneer/utils/: __init__.py  introspection.py
src/: boilerplate_manager.py  d_Inventory_update_stock.py  d_calculate_average.py  dynamic_decorator.py  dynamic_function.py  hot_swap_executor.py  llama_model_api.py  llm_code_generator.py  llm_response_cleaner.py  model_api_factory.py  test_calculate_average.py  test_update_stock.py
src/prompts/: default_function_prompt.txt  default_method_prompt.txt  test_function_prompt.txt  test_method_prompt.txt
tests/: README.md
tests/integration/: __init__.py  test_end_to_end.py
tests/unit/: __init__.py  test_code_storage.py  test_config.py  test_decorator_helpers.py  test_dynamic_decorator.py  test_hot_swap_executor.py  test_llm_code_generator.py  test_test_runner.py
