[build-system]
requires = ["setuptools>=42", "wheel", "build>=1.2.2.post1"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic_functioneer"
version = "1.2.0"
description = "A Python package for dynamic function and method handling with LLM support."
authors = [
    { name = "Erick Eduardo Ramirez Torres", email = "erickeduardoramireztorres@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
keywords = ["dynamic", "methods", "functions", "LLM", "hot-swapping"]
dependencies = [
    "astunparse",
    "uv",
        # "openai==1.55.3",
        # "openai",
        "openai>=1.64.0",
        "httpx>=0.28.1",
        "requests>=2.32.3",
        "google-genai>=1.3.0",
        "anthropic>=0.49.0",
        "crewai",
        "litellm>=1.65.3"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "pytest-timeout",
    "pytest-mock",
    "pytest-asyncio",
    "black",
    "flake8",
    "flake8-docstrings",
    "flake8-bugbear",
    "mypy",
    "isort",
    "bandit[toml]",
    "pre-commit"
]
docs = [
    "sphinx",
    "sphinx-rtd-theme"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
dynamic_functioneer = ["prompts/*"]

[tool.setuptools.exclude-package-data]
dynamic_functioneer = ["tests", "examples"]

# Black configuration
[tool.black]
line-length = 127
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | trials
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "venv/*", ".venv/*", "trials/*"]

# Bandit configuration (security linting)
[tool.bandit]
exclude_dirs = ["tests", "trials", ".venv", "venv"]
skips = ["B101", "B601"]  # B101: assert_used, B601: paramiko_calls

# Mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

